--- a/templates/login.html
+++ b/templates/login.html
@@ -17,10 +17,10 @@
         <form method="POST" action="">
           <div class="card-body">
               <div class="form-group">
-                <input type="email" class="form-control" placeholder="Username">
+                <input type="text" class="form-control" placeholder="Username" name="username">
               </div>
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Password" name="password">
               </div>
             <button type="submit" class="btn btn-lg btn-block btn-primary">Login</button>
           </div>
