Added: block access to all pages if not logged in

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -22,7 +22,7 @@
       <a class="btn btn-outline-secondary mr-2" href="#">Login</a>
       <a class="btn btn-outline-primary" href="#">Sign up</a>
       {% else %}
-      <div style="margin-right: 20px;">Logged in as: {{ username }}</div>
+      <div style="margin-right: 20px;">{{ username }}</div>
       <a class="btn btn-outline-danger" href="#">Sign out</a>
       {% endif %}
     </div>
