--- a/templates/create.html
+++ b/templates/create.html
@@ -14,6 +14,7 @@
 
       <div class="card mb-4 box-shadow">
 
+        {% if not code %}
         <form method="POST" action="{{url_for('create')}}">
           <div class="card-body">
               <div class="form-group">
@@ -31,6 +32,14 @@
             <button type="submit" class="btn btn-lg btn-block btn-primary">Make Anonymous Lee</button>
           </div>
         </form>
+        {% else %}
+
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+          <strong>ATTN!</strong> Your message has been created. You can copy the link below.
+          <br/>The link is available for a <strong> one time view</strong>
+        </div>
+          http://127.0.0.1:5000/r/{{code}}
+        {% endif %}
 
       </div>
 
