--- a/templates/create.html
+++ b/templates/create.html
@@ -41,13 +41,13 @@
 
         <span id="" class="badge badge-secondary mr-5 ml-5 mb-3">
 
-            <input class="form-control"  type="text" value="http://127.0.0.1:5000/r/{{code}}" id="message_url">
+            <input style="background-color: transparent;border:none;width:100%;color:lightgray;"  type="text" value="http://127.0.0.1:5000/r/{{code}}" id="message_url">
 
         </span>
 
         <button id="copy_button" onclick="copyToClipboard()">Copy to clipboard</button>
 
-        <span id="response"class="badge badge-secondary mr-5 ml-5 mb-3">
+        <span id="response">
 
         </span>
 
